upgraded run planning feature

--- a/run-club/package.json
+++ b/run-club/package.json
@@ -1,6 +1,7 @@
 {
   "name": "run-club",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -37,5 +38,7 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "eslint-plugin-jsx-a11y": "^6.10.0"
+  }
 }
