--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # Ignore node_modules
 node_modules/
+run-club/node_modules/
+server/node_modules/
 
 # Ignore yarn.lock if you don’t want it in version control
 yarn.lock
@@ -8,10 +10,24 @@ yarn.lock
 npm-debug.log
 .DS_Store
 .env
-node_modules/
-yarn.lock
-node_modules/
-run-club/node_modules/
-server/node_modules/
-build/
-.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Ignore build outputs
+/build
+run-club/build/
+
+# dependencies
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# misc
+.DS_Store
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
