--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Ignore node_modules
 node_modules/
-run-club/node_modules/
-server/node_modules/
+frontend/node_modules/
+backend/node_modules/
 
 # Ignore yarn.lock if you don’t want it in version control
 yarn.lock
@@ -17,7 +17,7 @@ npm-debug.log
 
 # Ignore build outputs
 /build
-run-club/build/
+frontend/build/
 
 # dependencies
 /.pnp
