--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.3.3",
     "file-saver": "^2.0.5",
     "geolib": "^3.3.4",
+    "html-webpack-plugin": "^5.6.2",
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "mapbox-gl": "^3.7.0",
@@ -18,6 +19,7 @@
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.26.2",
     "react-scripts": "^5.0.1",
+    "rimraf": "^6.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -45,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.25.8",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
